Your message about what changed

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
     <!-- hero end -->
 
-
+    <!-- start statistics -->
     <section class="section-container">
         <div class="bg-white p-8 rounded-xl shadow-lg">
             <div
@@ -76,12 +76,14 @@
 
                 <!-- user stats -->
                 <div class="flex items-center gap-6 px-12 py-6 md:py-0">
-                    <div class="bg-primary/65 shrink-0 rounded-full p-5">
-                        <img src="./src/user.png" alt="user" class="size-6">
-                    </div>
-                    <div>
-                        <h3 class="text-3xl font-bold text-gray-900">90+</h3>
-                        <p class="text-lg">Users</p>
+                    <div class="flex items-center gap-6 px-12 py-6 md:py-0">
+                        <div class="bg-primary/65 shrink-0 rounded-full p-5">
+                            <img src="./src/user.png" alt="user" class="size-6">
+                        </div>
+                        <div>
+                            <h3 class="text-3xl font-bold text-gray-900">90+</h3>
+                            <p class="text-lg">Users</p>
+                        </div>
                     </div>
                 </div>
 
@@ -113,6 +115,13 @@
 
             </div>
         </div>
+    </section>
+    <!-- end statistics -->
+
+
+    <!-- start features -->
+    <section class="section-container">
+        features
     </section>
 </body>
 
