--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         </nav>
 
         <!-- Mobile Dropdown Menu -->
-        <div id="mobile-menu"
-            class="md:hidden hidden bg-white shadow-md absolute top-full left-0 w-full px-4 py-4 space-y-2 transition-all duration-500 z-10">
+        <div id="mobile-menu" class="md:hidden hidden bg-white shadow-md absolute top-full left-0 w-full px-4 py-4 space-y-2 transition-all duration-500 z-10">
             <a href="#" class="block text-gray-700 hover:text-primary">Home</a>
             <a href="#" class="block text-gray-700 hover:text-primary">Contact</a>
             <a href="#" class="block text-gray-700 hover:text-primary">Service</a>
@@ -56,8 +55,7 @@
                 be easy with <span class="font-bold">LaslesVPN.</span></h1>
             <p class="mt-5">Provide a network for all your needs with easa and fun using LaslesVPN discover interesting
                 featuress from us.</p>
-            <button
-                class="mt-5 text-white font-bold p-2 w-40 shadow-lg hover:scale-90 duration-1000 hover:shadow-xl hover:bg-red-600 cursor-pointer rounded-lg bg-primary focus:outline-none ">Get
+            <button class="mt-5 text-white font-bold p-2 w-40 shadow-lg hover:scale-90 duration-1000 hover:shadow-xl hover:bg-red-600 cursor-pointer rounded-lg bg-primary focus:outline-none ">Get
                 Started</button>
         </div>
 
@@ -71,8 +69,7 @@
     <!-- start statistics -->
     <section class="section-container">
         <div class="bg-white p-8 rounded-xl shadow-lg">
-            <div
-                class="flex flex-col md:flex-row items-center justify-around divide-y md:divide-y-0 md:divide-x divide-gray-200">
+            <div class="flex flex-col md:flex-row items-center justify-around divide-y md:divide-y-0 md:divide-x divide-gray-200">
 
                 <!-- user stats -->
                 <div class="flex items-center gap-6 px-12 py-6 md:py-0">
@@ -121,7 +118,37 @@
 
     <!-- start features -->
     <section class="section-container">
-        features
+        <div class="flex flex-col md:flex-row items-center gap-12">
+            <!-- left -->
+            <div class="md:w-1/2">
+                <img src="./src/features.png" alt="features image">
+            </div>
+
+            <!-- right -->
+            <div class="md:w-1/2 space-y-8">
+                <h2 class="text-4xl font-bold leading-tight">We Provide Many Features You can Use</h2>
+                <p class="leading-relaxed">You can explore the features that we provide with fun and have their own functions each feature.</p>
+                <ul class="space-y-4 ">
+                    <li class="flex space-x-2">
+                        <img src="./src/green-tick.jpg" alt="tick" class="size-7">
+                        <p>Poweful online protection.</p>
+                    </li>
+                    <li class="flex space-x-2">
+                        <img src="./src/green-tick.jpg" alt="tick" class="size-7">
+                        <p>Internet without borders.</p>
+                    </li>
+                    <li class="flex space-x-2">
+                        <img src="./src/green-tick.jpg" alt="tick" class="size-7">
+                        <p>Supercharged VPN.</p>
+                    </li>
+                    <li class="flex space-x-2">
+                        <img src="./src/green-tick.jpg" alt="tick" class="size-7">
+                        <p>No specific time limits.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        
     </section>
 </body>
 
