--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
                 <h2 class="text-4xl font-bold leading-tight">We Provide Many Features You can Use</h2>
                 <p class="leading-relaxed">You can explore the features that we provide with fun and have their own functions each feature.</p>
                 <ul class="space-y-4 ">
-                    <li class="flex space-x-2">
+                    <li class="flex items-center space-x-2">
                         <img src="./src/green-tick.jpg" alt="tick" class="size-7">
                         <p>Poweful online protection.</p>
                     </li>
-                    <li class="flex space-x-2">
+                    <li class="flex items-center space-x-2">
                         <img src="./src/green-tick.jpg" alt="tick" class="size-7">
                         <p>Internet without borders.</p>
                     </li>
-                    <li class="flex space-x-2">
+                    <li class="flex items-center space-x-2">
                         <img src="./src/green-tick.jpg" alt="tick" class="size-7">
                         <p>Supercharged VPN.</p>
                     </li>
-                    <li class="flex space-x-2">
+                    <li class="flex items-center space-x-2">
                         <img src="./src/green-tick.jpg" alt="tick" class="size-7">
                         <p>No specific time limits.</p>
                     </li>
