Your message about what changed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </nav>
 
         <!-- Mobile Dropdown Menu -->
-        <div id="mobile-menu" class="md:hidden hidden bg-white shadow-md absolute top-full left-0 w-full px-4 py-4 space-y-2 transition-all duration-500 z-10">
+        <div id="mobile-menu"
+            class="md:hidden hidden bg-white shadow-md absolute top-full left-0 w-full px-4 py-4 space-y-2 transition-all duration-500 z-10">
             <a href="#" class="block text-gray-700 hover:text-primary">Home</a>
             <a href="#" class="block text-gray-700 hover:text-primary">Contact</a>
             <a href="#" class="block text-gray-700 hover:text-primary">Service</a>
@@ -55,7 +56,8 @@
                 be easy with <span class="font-bold">LaslesVPN.</span></h1>
             <p class="mt-5">Provide a network for all your needs with easa and fun using LaslesVPN discover interesting
                 featuress from us.</p>
-            <button class="mt-5 text-white font-bold p-2 w-40 shadow-lg hover:scale-90 duration-1000 hover:shadow-xl hover:bg-red-600 cursor-pointer rounded-lg bg-primary focus:outline-none ">Get
+            <button
+                class="mt-5 text-white font-bold p-2 w-40 shadow-lg hover:scale-90 duration-1000 hover:shadow-xl hover:bg-red-600 cursor-pointer rounded-lg bg-primary focus:outline-none ">Get
                 Started</button>
         </div>
 
@@ -69,7 +71,8 @@
     <!-- start statistics -->
     <section class="section-container">
         <div class="bg-white p-8 rounded-xl shadow-lg">
-            <div class="flex flex-col md:flex-row items-center justify-around divide-y md:divide-y-0 md:divide-x divide-gray-200">
+            <div
+                class="flex flex-col md:flex-row items-center justify-around divide-y md:divide-y-0 md:divide-x divide-gray-200">
 
                 <!-- user stats -->
                 <div class="flex items-center gap-6 px-12 py-6 md:py-0">
@@ -118,7 +121,7 @@
 
     <!-- start features -->
     <section class="section-container">
-        <div class="flex flex-col md:flex-row items-center gap-12">
+        <div class="flex flex-col md:flex-row items-center justify-between gap-12">
             <!-- left -->
             <div class="md:w-1/2">
                 <img src="./src/features.png" alt="features image">
@@ -126,8 +129,9 @@
 
             <!-- right -->
             <div class="md:w-1/2 space-y-8">
-                <h2 class="text-4xl font-bold leading-tight">We Provide Many Features You can Use</h2>
-                <p class="leading-relaxed">You can explore the features that we provide with fun and have their own functions each feature.</p>
+                <h2 class="text-4xl font-bold leading-tight">We Provide Many <br> Features You can Use</h2>
+                <p class="leading-relaxed md:w-2/3">You can explore the features that we provide with fun and have their
+                    own functions each feature.</p>
                 <ul class="space-y-4 ">
                     <li class="flex items-center space-x-2">
                         <img src="./src/green-tick.jpg" alt="tick" class="size-7">
@@ -148,8 +152,218 @@
                 </ul>
             </div>
         </div>
-        
+
     </section>
+    <!-- end features -->
+
+    <section class=" bg-gray-50">
+
+        <div class="section-container">
+            <!-- section header -->
+            <div class="text-center space-y-8 mb-16">
+                <h2 class="font-bold text-4xl">Choose your plan</h2>
+                <p class="text-lg">Let's choose the package that is best for you and explore it happily and <br>
+                    cheerfully.</p>
+            </div>
+
+            <!-- pricing plan -->
+            <div class="grid md:grid-cols-3 grid-cols-1 max-w-6xl mx-auto gap-8">
+                <!-- free plan -->
+                <div
+                    class="bg-white p-8 flex flex-col items-center rounded-2xl border-2 border-gray-200 hover:border-red-600 transition duration-1000 hover:scale-105 focus:outline-white space-y-6">
+                    <img src="./src/box.png" alt="box" class="w-38">
+                    <h2 class="font-bold text-lg">Free Plan</h2>
+                    <ul class="space-y-4 flex-grow">
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Unlimited Bandwitch.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Encrypted Connection.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>No Traffic Logs.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Unlimited Bandwitch.</span>
+                        </li>
+                    </ul>
+
+                    <!-- button -->
+                    <div class="text-center space-y-4">
+                        <h2 class="font-bold text-lg">Free</h2>
+                        <button
+                            class="border-2 border-primary hover:bg-red-600 hover:text-white text-primary px-16 py-2 rounded-full cursor-pointer">Submit</button>
+                    </div>
+                </div>
+
+                <!-- standard plan -->
+                <div
+                    class="bg-white p-8 flex flex-col items-center rounded-2xl border-2 border-gray-200 hover:border-red-600 transition duration-1000 hover:scale-105 focus:outline-white space-y-6">
+                    <img src="./src/box.png" alt="box" class="w-38">
+                    <h2 class="font-bold text-lg">Standard Plan</h2>
+                    <ul class="space-y-4 flex-grow">
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Unlimited Bandwitch.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Encrypted Connection.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Yes Traffic Logs.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Works on All Devices.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Connect Anywhere.</span>
+                        </li>
+                    </ul>
+
+                    <!-- button -->
+                    <div class="text-center space-y-4">
+                        <h2 class="font-bold text-lg">$9 / mo</h2>
+                        <button
+                            class="border-2 border-primary hover:bg-red-600 hover:text-white text-primary px-16 py-2 rounded-full cursor-pointer">Submit</button>
+                    </div>
+                </div>
+
+                <!-- Premium plan -->
+                <div class="bg-white p-8 flex flex-col items-center rounded-2xl border-2 border-gray-200 hover:border-red-600 transition duration-1000 hover:scale-105 focus:outline-white space-y-6">
+                    <img src="./src/box.png" alt="box" class="w-38">
+                    <h2 class="font-bold text-lg">Premium Plan</h2>
+                    <ul class="space-y-4 flex-grow">
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Unlimited Bandwitch.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Encrypted Connection.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Yes Traffic Logs.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Works on All Devices.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Connect Anywhere.</span>
+                        </li>
+                        <li class="flex space-x-3.5 items-center">
+                            <img src="./src/green-tick.jpg" alt="green-tick" class="size-7">
+                            <span>Get New Features.</span>
+                        </li>
+                    </ul>
+
+                    <!-- button -->
+                    <div class="text-center space-y-4">
+                        <h2 class="font-bold text-lg">$12 / mo</h2>
+                        <button class="border-2 border-primary hover:bg-red-600 hover:text-white text-primary px-16 py-2 rounded-full cursor-pointer">Submit</button>
+                    </div>
+                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- subscribe section -->
+    <section class="section-container">
+        <div class="bg-white rounded-xl shadow-lg lg:p-16 md:p-12 p-8 hover:shadow-2xl transition-all duration-500">
+            <div class="flex flex-col md:flex-row justify-between items-center gap-8">
+                <!-- left content -->
+                <div class="space-y-1">
+                    <h2 class="font-bold leading-tight lg:text-4xl md:text-3xl text-2xl">Subscribe Now for <br>Get Special Features!</h2>
+                    <p>Let's subscribe with us and find the fun.</p>
+                </div>
+
+                <!-- right content -->
+                <div>
+                    <button class="bg-primary shadow-2xl text-white lg:px-16 lg:py-4 md:px-12 md:py-3 px-8 py-2 rounded-lg cursor-pointer ">Subscribe</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section -->
+    <footer class="bg-[#F8F8F8]">
+        <div class="section-container">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
+                <!-- brand column -->
+                <div class="lg:col-span-1">
+                    <div class="flex items-center gap-2 mb-5">
+                        <img src="./src/logo.png" alt="logo" class="h-8">
+                        <span class="text-xl font-bold">LaslesVPN</span>
+                    </div>
+                    <p class="mb-8">LaslesVPN is a private virtual network that has unique feature and has high security.</p>
+                    <div class="flex flex-col">
+                        <div class="flex gap-4 mb-8">
+                            <a href="/" class="bg-red-500 p-2 rounded-full shadow-md hover:shadow-lg transition-all hover:-translate-y-1 duration-300">
+                                <img src="./src/facebook.png" alt="facebook" class="size-6">
+                            </a>
+
+                            <a href="/" class="bg-red-500 p-2 rounded-full shadow-md hover:shadow-lg transition-all hover:-translate-y-1 duration-300">
+                                <img src="./src/instagram.png" alt="facebook" class="size-6">
+                            </a>
+
+                            <a href="/" class="bg-red-500 p-2 rounded-full shadow-md hover:shadow-lg transition-all hover:-translate-y-1 duration-300">
+                                <img src="./src/twitter.png" alt="facebook" class="size-6">
+                            </a>
+                        </div>
+                        <p>&copy;2025 LaslesVPN</p>
+                        
+                    </div>
+                </div>
+
+                <!-- product column -->
+                <div>
+                    <h3 class="font-bold text-2xl mb-3">Product</h3>
+                    <ul class="space-y-2">
+                        <li>Download</li>
+                        <li>Pricing</li>
+                        <li>Location</li>
+                        <li>Server</li>
+                        <li>Countries</li>
+                        <li>Blog</li>
+                    </ul>
+                </div>
+
+                <!-- engage column -->
+                <div>
+                    <h3 class="font-bold text-2xl mb-3">Engage</h3>
+                    <ul class="space-y-2">
+                        <li>LaslesVPN ?</li>
+                        <li>FAQ</li>
+                        <li>Tutorials</li>
+                        <li>About us</li>
+                        <li>Privacy Policy</li>
+                        <li>Terms of Services</li>
+                    </ul>
+                </div>
+
+                <!-- earn money column -->
+                <div>
+                    <h3 class="font-bold text-2xl mb-3">Earn Money</h3>
+                    <ul class="space-y-2">
+                        <li>Download</li>
+                        <li>Pricing</li>
+                        <li>Locations</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
